--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&family=Kumbh+Sans:wght@700&family=Lora:ital,wght@0,400;0,600;0,700;1,600&family=News+Cycle:wght@700&family=Noticia+Text:ital,wght@1,700&family=Nunito+Sans:wght@300;400&family=Open+Sans:ital,wght@0,300;0,500;0,700;1,700&family=Poppins:wght@500;600;700&family=Rampart+One&family=Roboto+Mono:wght@500;700&family=Roboto+Slab:wght@300&family=Roboto:wght@100;700&family=Sora:wght@500;600&family=Teko:wght@600&family=Urbanist:ital,wght@1,500&display=swap');
+*{
+  margin:0;
+  padding: 0;
+  box-sizing: border-box;
+  }
+  body{
+    font-family: 'Roboto Mono', monospace;
+    
+  }
+  .paper:hover{
+    box-shadow: rgba(120, 11, 228, 0.912) 0px 7px 29px 0px;
+    cursor: pointer;
+  }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  /*for desktop devices*/
+@media only screen and (min-width:769px){
+  .image{
+    margin-top: 10%;
+    width:500px;
+    animation: float 3s ease-in-out infinite;
+  }
 }
+/*for mobile devices*/
+@media only screen and (max-width: 769px) {
+  .image{
+    margin-top: 10px;
+    width:250px;
+    animation: float 3s ease-in-out infinite;
+  }
+}
+  
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  @keyframes appear{
+    from{
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    to{
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  .grid{
+    opacity: 0;
+    animation: appear 2s ease-in-out forwards;
+  }
+@keyframes float{
+  0%{
+    transform: translateY(0);
+  }
+  50%{
+    transform: translateY(-20px);
+  }
+  100%{
+    transform:translateY(0);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.footer{
+  width: 100%;
+  padding: 2px 5px;
+  border-radius: 20px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  bottom:0%;
+  position: fixed;
   align-items: center;
+  text-align: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.icons{
+  color:"#1f51ff";
 }
